# ita-corpus-chuwa

./: .gitignore  .markdownlint.json  Makefile  README.md  pyproject.toml
.circleci/: config.yml
data/input/: emotion.tsv  recitation.tsv
data/knp/: EMOTION100_001.knp  EMOTION100_005.knp  EMOTION100_006.knp  EMOTION100_007.knp  EMOTION100_008.knp  EMOTION100_011.knp  EMOTION100_013.knp  EMOTION100_015.knp  EMOTION100_016.knp  EMOTION100_018.knp  EMOTION100_019.knp  EMOTION100_020.knp  EMOTION100_022.knp  EMOTION100_023.knp  EMOTION100_025.knp  EMOTION100_027.knp  EMOTION100_030.knp  (+210 more)
docs/: note.md  processing.md
input/: emotion.tsv  recitation.tsv
knp/: EMOTION100_002.knp  EMOTION100_003.knp  EMOTION100_004.knp  EMOTION100_009.knp  EMOTION100_010.knp  EMOTION100_012.knp  EMOTION100_014.knp  EMOTION100_017.knp  EMOTION100_021.knp  EMOTION100_024.knp  EMOTION100_026.knp  EMOTION100_028.knp  EMOTION100_029.knp  EMOTION100_031.knp  EMOTION100_032.knp  EMOTION100_043.knp  EMOTION100_044.knp  EMOTION100_045.knp  EMOTION100_046.knp  EMOTION100_049.knp  EMOTION100_052.knp  EMOTION100_055.knp  EMOTION100_057.knp  EMOTION100_061.knp  EMOTION100_062.knp  EMOTION100_063.knp  EMOTION100_066.knp  EMOTION100_069.knp  EMOTION100_072.knp  EMOTION100_073.knp  EMOTION100_074.knp  EMOTION100_075.knp  EMOTION100_076.knp  EMOTION100_077.knp  EMOTION100_079.knp  EMOTION100_082.knp  EMOTION100_084.knp  EMOTION100_088.knp  EMOTION100_090.knp  EMOTION100_094.knp  (+159 more)
scripts/: check_jumanpp.py  clecn_imis.py  dist2katool.py  generate_txt.py  ita-corpus-extract.py  katool2dist.py
