[tool.poetry]
name = "ita-corpus-chuwa"
version = "0.1.0"
description = ""
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
mojimoji = "^0.0.11"
jaconv = "^0.3"

[tool.poetry.dev-dependencies]
autopep8 = ">=1.5.4"
flake8 = ">=3.8.4"
isort = ">=5.6.4"
mypy = ">=0.790"
yamllint = ">=1.25.0"
pydocstyle = ">=5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
